apps/firefly/firefly/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
      component: firefly
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly
        component: firefly
    spec:
      containers:
        - name: firefly
          image: fireflyiii/core:version-5.6.16
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /var/www/html/storage/upload
              name: upload
            - mountPath: /var/www/html/storage/export
              name: export
          resources: {}
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: firefly-upload
        - name: export
          persistentVolumeClaim:
            claimName: firefly-export
