apps/firefly/firefly/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: firefly
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: firefly
  type: ClusterIP
